src/config/__tests__/__snapshots__/load.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load config.yml invalid config should return null on bad yaml 1`] = `
"Could not load /src/app/config/__tests__/assets/bad.yml:

YAMLException: end of the stream or a document separator is expected at line 1, column 4:
    0: -
       ^"
`;

exports[`should load config.yml invalid config should throw on empty 1`] = `
"Could not load /src/app/config/__tests__/assets/empty.yml:

Error: Configuration is empty, /src/app/config/__tests__/assets/empty.yml"
`;

exports[`should load config.yml invalid config should throw on missing file 1`] = `"Could not find /src/app/config/__tests__/assets/config.yml"`;

exports[`should load config.yml valid config should return config 1`] = `
Object {
  "path": "/images/:preset/:image",
  "presets": Object {
    "t_720": Object {
      "steps": Array [
        Object {
          "$crop": null,
          "gravity": "center",
          "width": 720,
        },
        Object {
          "$format": Object {
            "type": "jpg",
          },
        },
        Object {
          "$compress": null,
          "lossy": true,
          "quality": 92,
        },
      ],
    },
  },
  "sources": Array [
    Object {
      "access_key_id": "access_key_id",
      "bucket_name": "bucket_name",
      "path": null,
      "region": "region",
      "s3": null,
      "secret_access_key": "secret_access_key",
    },
    Object {
      "http": null,
      "root": "https://example.com/images/:image",
    },
  ],
}
`;
